--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".insertname">
-
-
-
-        </activity>
+        <activity android:name=".insertname"></activity>
+        <activity android:name=".BoxingInfo"></activity>
     </application>
 
 </manifest>
